# wasabi-s3-operator

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  artifacthub-repo.yml  index.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: operator-patterns.mdc  python-guidelines.mdc  security-practices.mdc  testing-strategy.mdc
.github/: cr.yaml  dependabot.yml
.github/workflows/: helm-test.yml  helm.yml  setup-pages.yml
architecture/: BUILD_SUMMARY.md  PROGRESS.md  STATUS.md  TODO.md  crd-specifications.md  development-plan.md
docs/: ACCESS_KEY_ROTATION.md  CODE_ORGANIZATION.md  CODE_REFACTORING_GUIDE.md  DOCUMENTATION_CLEANUP.md  IAM_POLICY.md  README.md  ROTATION_IMPLEMENTATION_SUMMARY.md  VERSIONING_STRATEGY.md  grafana-dashboard-readme.md  grafana-dashboard.json
examples/: README.md  SIMPLE_WORKFLOW.md  USER_WORKFLOW.md  accesskey-with-rotation.yaml  bucket-auto-managed.yaml  bucket-basic.yaml  bucket-policy-public-read.yaml  bucket-with-deletion.yaml  bucket-with-lifecycle.yaml  helm-values.yaml  iampolicy-basic.yaml  provider-wasabi.yaml  user-basic.yaml  user-with-iampolicy.yaml  workflow-with-iampolicy.yaml  workflow-with-user.yaml
helm/s3-operator/: Chart.yaml  README.md  values.yaml
helm/wasabi-s3-operator/: Chart.yaml  README.md  values.yaml
helm/wasabi-s3-provider/: Chart.yaml  README.md  values.yaml
scripts/: build-and-push.sh  quick-deploy.sh
src/s3_operator/: __init__.py  constants.py  logging.py  main.py  metrics.py
src/wasabi-s3-operator/: main.py  metrics.py
src/wasabi_s3_operator/: __init__.py  main.py  (+4 more)
(+88 files in other folders)
